--- a/index.html
+++ b/index.html
@@ -3,22 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>FriendFilter</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js" type="text/javascript"></script>
+    <script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
 </head>
 <body>
-
-
-<script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
-<script>
-    VK.init({
-        apiId: 5379727
-        });
-    VK.Auth.login(function(response) {
-        if (response.session) {
-            console.log('всё ок!');
-        } else {
-            alert('Не удалось авторизоваться');
-        }
-    }, 2);
-</script>
+    <div class="container">
+        <div class="wrapper">
+            <div class="col-md-12 friendfilter white">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row h45 orange-head">
+                            Выберите друзей
+                        </div>
+                        <div class="row h400">
+                            <div class="col-md-6 div-right h400">
+                                <div class="row h45 lite-gray">
+                                    <span class="glyphicon glyphicon-search search" aria-hidden="true"></span>
+                                    <input type="text" placeholder="Начните вводить имя друга">
+                                </div>
+                                <div class="row scroll">
+                                    <ul class="list-group">
+                                      <li class="list-group-item h60 friend div-bottom">
+                                        <span class="glyphicon glyphicon-plus friend-ico"></span>
+                                        <img id="photo" src="http://lorempixel.com/45/45" alt="" class="img-circle">
+                                        <span id="name">Friend name</span>
+                                      </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-6 h400">
+                                <div class="row h45 lite-gray">
+                                    <span class="glyphicon glyphicon-search search" aria-hidden="true"></span>
+                                    <input type="text" placeholder="Начните вводить имя друга">
+                                </div>
+                                <div class="row h60 friend div-bottom">
+                                    <img src="http://lorempixel.com/45/45" alt="" class="img-circle">
+                                    <span id="name">Friend name</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row lite-gray h45">
+                            <button type="button" class="btn btn-default orange-button">Сохранить</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--    <script src="main.js" type="text/javascript"></script>-->
 </body>
 </html>
