--- a/index.html
+++ b/index.html
@@ -23,14 +23,8 @@
                                     <span class="glyphicon glyphicon-search search" aria-hidden="true"></span>
                                     <input type="text" placeholder="Начните вводить имя друга">
                                 </div>
-                                <div class="row scroll">
-                                    <ul class="list-group">
-                                      <li class="list-group-item h60 friend div-bottom">
-                                        <span class="glyphicon glyphicon-plus friend-ico"></span>
-                                        <img id="photo" src="http://lorempixel.com/45/45" alt="" class="img-circle">
-                                        <span id="name">Friend name</span>
-                                      </li>
-                                    </ul>
+                                <div class="row scroll" id="left">
+                                    
                                 </div>
                             </div>
                             <div class="col-md-6 h400">
@@ -38,9 +32,8 @@
                                     <span class="glyphicon glyphicon-search search" aria-hidden="true"></span>
                                     <input type="text" placeholder="Начните вводить имя друга">
                                 </div>
-                                <div class="row h60 friend div-bottom">
-                                    <img src="http://lorempixel.com/45/45" alt="" class="img-circle">
-                                    <span id="name">Friend name</span>
+                                <div class="row scroll" id="right">
+
                                 </div>
                             </div>
                         </div>
@@ -52,6 +45,28 @@
             </div>
         </div>
     </div>
-<!--    <script src="main.js" type="text/javascript"></script>-->
+    <script src="main.js" type="text/javascript"></script>
+    <script type="text/x-handlebars-template" id="friendItemTemplateLeft">
+        <ul class="list-group" id="friendList">
+            {{#each list}}
+              <li class="list-group-item h60 friend div-bottom">
+                <span class="glyphicon glyphicon-plus friend-ico"></span>
+                <img id="photo" src="{{photo_50}}" alt="" class="img-circle">
+                <span id="name">{{first_name}} {{last_name}}</span>
+              </li>
+            {{/each}}
+        </ul>
+    </script>
+    <script type="text/x-handlebars-template" id="friendItemTemplateRight">
+        <ul class="list-group" id="friendList">
+            {{#each list}}
+              <li class="list-group-item h60 friend div-bottom">
+                <span class="glyphicon glyphicon-plus friend-ico"></span>
+                <img id="photo" src="{{photo_50}}" alt="" class="img-circle">
+                <span id="name">{{first_name}} {{last_name}}</span>
+              </li>
+            {{/each}}
+        </ul>
+    </script>
 </body>
 </html>
