--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                                     <input type="text" placeholder="Начните вводить имя друга">
                                 </div>
                                 <div class="row scroll" id="left">
+                                    <ul class="list-group" id="friendList">
                                     
+                                    </ul>
                                 </div>
                             </div>
                             <div class="col-md-6 h400">
@@ -33,7 +35,9 @@
                                     <input type="text" placeholder="Начните вводить имя друга">
                                 </div>
                                 <div class="row scroll" id="right">
+                                    <ul class="list-group" id="friendFilter">
 
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -47,26 +51,13 @@
     </div>
     <script src="main.js" type="text/javascript"></script>
     <script type="text/x-handlebars-template" id="friendItemTemplateLeft">
-        <ul class="list-group" id="friendList">
             {{#each list}}
-              <li class="list-group-item h60 friend div-bottom">
-                <span class="glyphicon glyphicon-plus friend-ico"></span>
+              <li id="friendListItem" class="list-group-item h60 friend div-bottom" data-uid="{{uid}}">
                 <img id="photo" src="{{photo_50}}" alt="" class="img-circle">
-                <span id="name">{{first_name}} {{last_name}}</span>
+                <p>{{first_name}} {{last_name}}</p>
+                <span data-id="addFriend" class="glyphicon glyphicon-plus friend-ico"></span>
               </li>
             {{/each}}
-        </ul>
-    </script>
-    <script type="text/x-handlebars-template" id="friendItemTemplateRight">
-        <ul class="list-group" id="friendList">
-            {{#each list}}
-              <li class="list-group-item h60 friend div-bottom">
-                <span class="glyphicon glyphicon-plus friend-ico"></span>
-                <img id="photo" src="{{photo_50}}" alt="" class="img-circle">
-                <span id="name">{{first_name}} {{last_name}}</span>
-              </li>
-            {{/each}}
-        </ul>
     </script>
 </body>
 </html>
